[FIX] stream tolist change to not immuatable