@@ -91,7 +91,7 @@ public class UserStockService {
 		boolean onlyShowOwn = this.userSettingFacade.queryByUserId(userId).getOnlyShowOwnStock();
 		List<UserStock> ownList = this.userStockFacade.queryByUserId(userId);
 		if (onlyShowOwn) {
-			ownList = ownList.stream().filter(x -> BigDecimal.ZERO.compareTo(x.getAmount()) < 0).toList();
+			ownList = ownList.stream().filter(x -> BigDecimal.ZERO.compareTo(x.getAmount()) < 0).collect(Collectors.toList());
 		}
 		Map<String, String> stockNames = this.stockFacade.queryAll().stream().collect(Collectors.toMap(Stock::getCode, Stock::getName));
 		List<UserStockVo> vos = new ArrayList<UserStockVo>();
@@ -126,7 +126,7 @@ public class UserStockService {
 
 	public List<UserStockRecordVo> getOwnStockRecords(UUID userStockId) {
 		List<UserStockRecord> entities = this.userStockRecordFacade.queryAll(userStockId);
-		List<UUID> accountRecordIds = entities.stream().map(UserStockRecord::getAccountRecordId).distinct().toList();
+		List<UUID> accountRecordIds = entities.stream().map(UserStockRecord::getAccountRecordId).distinct().collect(Collectors.toList());
 		List<AccountRecord> accountRecords = this.accountRecordFacade.queryAll(accountRecordIds);
 		Map<UUID, UUID> accountRecordFileIdMap = accountRecords.stream().collect(HashMap::new, (map, accountRecord) -> map.put(accountRecord.getId(), accountRecord.getFileId()), HashMap::putAll);
 		List<UserStockRecordVo> vos = new ArrayList<UserStockRecordVo>();
